crates/ars-collections/tests/ui/tab_key_wrong_str_literal.stderr
error: TabKey str keys must be string literals
 --> tests/ui/tab_key_wrong_str_literal.rs:5:21
  |
5 |     #[tab_key(str = 1)]
  |                     ^
