crates/ars-collections/tests/ui/tab_key_wrong_str_literal.rs
use ars_collections::TabKey;

#[derive(TabKey)]
enum BadTab {
    #[tab_key(str = 1)]
    Profile,
}

fn main() {}
